--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,9 +19,9 @@
 <body>
   <nav>
     <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+      <img id="slackLogo"src="./images/slack-logo.png" alt="Slack logo" />
 
-      <ul>
+      <ul hidden>
         <li>
           <a href="#">Product</a>
         </li>
@@ -38,12 +38,12 @@
     </div>
 
     <div>
-      <button>
-        <img src="./images/icon-search.png" alt="Search icon">
+      <button id="searchIconButon">
+        <img class="searchAndMenu" src="./images/icon-search.png" alt="Search icon">
       </button>
 
-      <button>
-        <img src="./images/icon-menu.png" alt="Menu icon">
+      <button id="menuIconButon">
+        <img class="searchAndMenu" src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
       <ul hidden>
@@ -57,129 +57,129 @@
     </div>
   </nav>
 
-  <header>
-    <div>
-      <h1>Great teamwork starts with a digital HQ</h1>
+  <header id="first1Section">
+    <div id="firstDiv">
+      <h1 id="mainTitle">Great teamwork starts with a digital HQ</h1>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+      <p class="slackIsFree"><span id="justYellow">Slack is free to try </span> for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div id="email-google">
+        <button id="emailButon">Sign up with email</button>
 
         <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
-          <span>Sign up with Google</span>
+          <img id="googleButon" src="./images/logo-google.png" alt="Google logo" />
+          <span id="textGoogle">Sign up with Google</span>
         </button>
       </div>
 
     </div>
 
-    <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
+    <div id="secondDiv">
+      <img class="cropPic" src="./images/hero-product-ui.png" alt="Slack app screenshot"/>
     </div>
   </header>
 
   <main>
     <section>
-      <p>Trusted by companies all over the world</p>
+      <p id="socialMediaPhrase">Trusted by companies all over the world</p>
 
-      <div>
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
-        <img src="./images/logo-nasa.png" alt="NASA logo" />
-        <img src="./images/logo-uber.png" alt="Uber logo" />
-        <img src="./images/logo-target.png" alt="Target logo" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo" />
+      <div id="socialMedia">
+        <img class="airbnb" src="./images/logo-airbnb.png" alt="Airbnb logo" />
+        <img class="nasa" src="./images/logo-nasa.png" alt="NASA logo" />
+        <img class="airbnb" src="./images/logo-uber.png" alt="Uber logo" />
+        <img class="nasa" src="./images/logo-target.png" alt="Target logo" />
+        <img class="NYTimes"src="./images/logo-nyt.png" alt="New York Times logo" />
+        <img class="NYTimes" src="./images/logo-spotify.png" alt="Spotify logo" />
       </div>
 
     </section>
 
     <section>
       <div>
-        <img src="./images/connectedness-mobile.png" alt="connectedness" />
+        <img class="slackPics" src="./images/connectedness-mobile.png" alt="connectedness" />
       </div>
 
       <div>
-        <h2>Bring your team together</h2>
+        <h2 class="anotherTitles">Bring your team together</h2>
 
-        <p>
+        <p class="anotherParagraphs">
           At the heart of Slack are channels: organized spaces for everyone and everything you need for work. In
           channels, it's easier to connect across departments, offices, time zones and even other companies.
         </p>
 
-        <a href="#">
+        <a class="linksWeb" href="#">
           <span>Learn more about channels</span>
         </a>
       </div>
     </section>
 
-    <section>
+    <section id="section-1">
       <div>
-        <h2>Choose how you want to work</h2>
-        <p>
+        <h2 class="anotherTitles">Choose how you want to work</h2>
+        <p class="anotherParagraphs">
           In Slack, you’ve got all the flexibility to work when, where and how it’s best for you. You can easily chat,
           send
           audio and video clips, or hop on a huddle to talk things out live.
         </p>
 
-        <a href="#">
+        <a class="linksWeb" href="#">
           <span>Learn more about flexible communication</span>
         </a>
       </div>
 
       <div>
-        <img src="./images/flexibility-mobile.png" alt="flexibility" />
+        <img id="flexibility" class="slackPics" src="./images/flexibility-mobile.png" alt="flexibility" />
       </div>
     </section>
 
     <section>
       <div>
-        <img src="./images/speed-mobile.png" alt="speed" />
+        <img class="slackPics" src="./images/speed-mobile.png" alt="speed" />
       </div>
 
       <div>
-        <h2>Move faster with your tools in one place</h2>
-        <p>
+        <h2 class="anotherTitles">Move faster with your tools in one place</h2>
+        <p class="anotherParagraphs">
           With your other work apps connected to Slack, you can work faster by switching tabs less. And with powerful
           tools like Workflow Builder, you can automate away routine tasks.
         </p>
 
-        <a href="#">
+        <a class="linksWeb" href="#">
           <span>Learn more about the Slack platform</span>
         </a>
       </div>
     </section>
 
 
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+    <section id="section-2">
+      <h3 id="large-small-rely">Teams large and small rely on Slack</h3>
+      <p id="oneParagraph">Slack securely scales up to support collaboration at the world’s biggest companies.</p>
 
-      <div>
-        <button>Meet Slack for enterprise</button>
-        <button>Talk to sales</button>
+      <div id="divOne">
+        <button id="enterpriseButon">Meet Slack for enterprise</button>
+        <button id="salesButon">Talk to sales</button>
       </div>
 
-      <ul>
-        <li>
-          <p><span>85%</span></p>
-          <p>
+      <ul id="no-bullets">
+        <li class="liFather">
+          <p><span class="porcentaje">85%</span></p>
+          <p class="porcentajeText">
             of users say Slack has improved communication
             <sup>*</sup>
           </p>
         </li>
 
-        <li>
-          <p><span>86%</span></p>
-          <p>
+        <li class="liFather">
+          <p><span  class="porcentaje">86%</span></p>
+          <p class="porcentajeText">
             feel their ability to work remotely has improved has improved
             <sup>*</sup>
           </p>
         </li>
 
-        <li>
-          <p><span>88%</span></p>
-          <p>
+        <li class="liFather">
+          <p><span class="porcentaje">88%</span></p>
+          <p class="porcentajeText">
             feel more connected to their teams*
             <sup>*</sup>
           </p>
@@ -187,20 +187,20 @@
       </ul>
     </section>
 
-    <section>
+    <section id="section-3">
       <h3>Welcome to your new digital HQ</h3>
 
-      <button>Try for free</button>
-      <button>Talk to sales</button>
+      <button id="freeButon">Try for free</button>
+      <button id="salesButon">Talk to sales</button>
     </section>
 
   </main>
 
-  <footer>
-    <img src="./images/iso-slack.png" alt="Slack logo" />
-    <div>
-      <ul>
-        <li>WHY SLACK?</li>
+  <footer id="whiteColor">
+    <img id="logo-de-slack" src="./images/iso-slack.png" alt="Slack logo" />
+    <div id="gridsThings">
+      <ul class="finishingGrids">
+        <li class="soloNegrita">WHY SLACK?</li>
         <li>Slack vs. Email</li>
         <li>Channels</li>
         <li>Engagement</li>
@@ -208,8 +208,8 @@
         <li>Watch the Demo</li>
       </ul>
 
-      <ul>
-        <li>PRODUCT</li>
+      <ul class="finishingGrids">
+        <li class="soloNegrita">PRODUCT</li>
         <li>Features</li>
         <li>Integrations</li>
         <li>Enterprise</li>
@@ -217,14 +217,14 @@
         <li>Releases</li>
       </ul>
 
-      <ul>
-        <li>PRICING</li>
+      <ul class="finishingGrids">
+        <li class="soloNegrita">PRICING</li>
         <li>Plans</li>
         <li>Paid vs. Free</li>
       </ul>
 
-      <ul>
-        <li>COMPANY</li>
+      <ul class="finishingGrids">
+        <li class="soloNegrita">COMPANY</li>
         <li>About Us</li>
         <li>Leadership</li>
         <li>Investor Relations</li>
@@ -235,19 +235,19 @@
     </div>
 
 
-    <ul>
+    <ul id="terms">
       <li>Status</li>
       <li>Privacy</li>
       <li>Terms</li>
       <li>Cookie Preferences</li>
       <li>Contact Us</li>
       <li>Change Region</li>
-      <li>Download Slack</li>
+      <li id="differentLink">Download Slack</li>
     </ul>
 
     <hr>
 
-    <ul>
+    <ul id="emoSocialMedia">
       <li>
         <i class="fab fa-twitter"></i>
       </li>
@@ -262,7 +262,7 @@
       </li>
     </ul>
 
-    <div>
+    <div id="theFooter">
       <small>
         &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
         their respective owners.
